Rework most classes

--- a/classes/bard.org
+++ b/classes/bard.org
@@ -23,14 +23,12 @@ To begin playing a Bard, first choose a subclass: [[[id:6a8efa65-451d-4eac-a069-
 * Proficiencies
 | Armor       | Weapons       | Tools                                |
 |-------------+---------------+--------------------------------------|
-| Light armor | Daggers       | 3 musical instruments of your choice |
+| Light armor | Daggers       | 1 musical instrument of your choice  |
 |             | Shortsword    |                                      |
 |             | Longsword     |                                      |
 |             | Hand crossbow |                                      |
 
 Health Transfer increases to 20 health.
-
-
 
 * Level-up
 1. Gain _*Life Force Manipulation*_. At any time, you may use your turn to deal 1d6 decay damage to an enemy or heal an ally for 1d6. This can only be used in combat, but you can use it once after combat to heal if necessary. Gain one subclass ability.
