--- a/classes/subclasses/rebel.org
+++ b/classes/subclasses/rebel.org
@@ -1,12 +1,14 @@
 :PROPERTIES:
 :ID:       83fe62a2-eb63-488d-897e-b5b439718f03
 :END:
+:REBEL:
 #+title:    Rebel
 #+filetags: :DND:warrior:
 #+author:   zfoteff
 #+date:     [2023-08-11 Fri]
 #+summary:  Rebel subclass for the Warrior class
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../../static/stylesheets/subclass-style.css" />
+:END:
 #+BEGIN_CENTER
 [[[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]]] [[[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]]] [[[id:1846aace-7d40-41af-95e6-4a4d72044af5][Warrior]]]
 #+END_CENTER
