--- a/classes/sorcerer.org
+++ b/classes/sorcerer.org
@@ -15,7 +15,7 @@
 -----
 Manipulate the world around you in a manner of your choosing with latent powers imbued in the user. Uses spells primarily, cast using Wisdom.
 
-To begin playing as a Sorcerer, first choose a sorcery: [[[id:ca360c77-3d1d-43f3-9b6b-e65bb2b1f686][Order]], [[id:8cf16f81-68be-4205-9ff9-1c803443f6bc][Chaos]], [[id:569f7d4d-5744-49e4-ac0d-bebbd1795992][Psychic]]]. Each sorcery comes with some special abilities as you get stronger, and a few distinct advantages right off the jump. All sorcerers can learn generic spells in the [[id:49c66431-d9c7-4213-ae29-b62365fd32d4][spell index]], generic sorceries, and sorcery spells matching their chosen sorcery type. Make sure to review the Magic Guide to get an understanding of the magic system.
+To begin playing as a Sorcerer, first choose a sorcery: [[[id:ca360c77-3d1d-43f3-9b6b-e65bb2b1f686][Order]], [[id:8cf16f81-68be-4205-9ff9-1c803443f6bc][Chaos]], [[id:569f7d4d-5744-49e4-ac0d-bebbd1795992][Psychic]]]. Each sorcery comes with some special abilities as you get stronger, and a few distinct advantages right off the jump. All sorcerers can learn generic spells in the [[id:49c66431-d9c7-4213-ae29-b62365fd32d4][spell index]], generic sorceries, and sorcery spells matching their chosen sorcery type. Make sure to review the Magic Guide to get an understanding of the magic system. Be sure you apply your level 1 bonuses from your subclass and pick 1 trait from your subclass to apply to your character.
 
 Spells are cast using WIS + PROF
 
@@ -28,25 +28,26 @@ Spells are cast using WIS + PROF
 |       | Staffs        | Conjuring Kits |
 |       | Daggers       |                |
 |       | Quarterstaffs |                |
+
 * Level-up guide
 1. Pick one generic spell, one sorcerer spell, and one sorcery trait (consult your subclass page). You begin the game with three level one spell slots (Total: 3 lvl1, 0 lvl2, 0 lvl3, 0 lvl4). All three reset on every long rest. Spell slots are only used up during combat encounters.
 2. Add one generic spell and one sorcerer spell to your spell list.
-3. Add one sorcery. Add one level one spell slot (Total: 4, 0, 0, 0).
-4. Gain Recast Recharge.
-5. You are now able to learn level two spells. Add +1 WIS and +1 of Any, as well as one level two spell slot. (Total: 4, 1, 0, 0).
+3. Gain _*Recast Recharge*_. Add one level one spell slot (Total: 4, 0, 0, 0).
+4. Increase one ability score of your choosing by +2, or two ability scores by +1
+5. You are now able to learn level two spells. Add +1 WIS and +1 of Any, as well as one level two spell slot. (Total: 4, 1, 0, 0). Choose an additional sorcery trait to apply to your character
 6. Add one generic spell, and one sorcerer spell.
 7. Add one sorcery, and one level two spell slot (Total: 4, 2).
-8. Add +1 to INT and +1 to WIS.
-9. Add +1 of Any.
+8. Increase one ability score of your choosing by +2, or two ability scores by +1
+9. Add +1 to INT and +1 to WIS.
 10. Become an Archsorcerer: Evolve, Mutate, or Ascend.
 11. You are now able to learn level three spells. Add two generic spells, one level three spell slot, and 1d6 health. (Total: 4, 2, 1, 0).
-12. Add one sorcerer spell and 1d6 health.
-13. Add one sorcery.
-14. Add +1 of Any, 1d6 health, and one level two spell slot. (Total: 4, 3, 1, 0)
-15. Add one sorcerer trait, one level three spell slot, and 1d6 health (Total: 4, 3, 2, 0).
-16. You are now able to learn level four spells. Add one level four spell slot. (Total: 4, 3, 2, 1).
-17. Add one generic spell and 1d6 health.
-18. Add one sorcerer spell and 1d6 health.
-19. Add one sorcery and 1d6 health. Become a Transcendent Archsorcerer.
+12. Increase one ability score of your choosing by +2, or two ability scores by +1
+13. Add +1 of Any, 1d6 health, and one level two spell slot. (Total: 4, 3, 1, 0)
+14. Add one sorcerer trait, one level three spell slot, and 1d6 health (Total: 4, 3, 2, 0).
+15. You are now able to learn level four spells. Add one level four spell slot. (Total: 4, 3, 2, 1).
+16. Increase one ability score of your choosing by +2, or two ability scores by +1
+17. Add one generic spell and add one sorcerer spell.
+18. Add one sorcery. Become a Transcendent Archsorcerer.
+19. Increase one ability score of your choosing by +2, or two ability scores by +1
 20. Multiclass
 * Footnotes
