--- a/classes/subclasses/chaos_sorcerer.org
+++ b/classes/subclasses/chaos_sorcerer.org
@@ -14,9 +14,9 @@
 Chaos sorcerers rearrange the past to confound enemies, but often rely on situational context to unleash their full potential.
 
 * Sorcery Traits:
-- /Chaotic Struggle/: Any damage you deal to Lawful enemies is increased by 50%.
-- /Rule Breaker/: Regardless of your actions within the campaign, you will be considered a Chaotic creature for the rest of the game by everyone you encounter, including the gods. Your deception modifier is permanently +2.
-- /Annoyance/: Once per long rest, become able to ask for an insight into what will frustrate one NPC of your choosing the most. Gain +3 on rolls pertaining to that action.
+- _/Chaotic Struggle/_: Any damage you deal to Lawful enemies is increased by 50%.
+- _/Rule Breaker/_: Regardless of your actions within the campaign, you will be considered a Chaotic creature for the rest of the game by everyone you encounter, including the gods. Your deception modifier is permanently +2.
+- _/Annoyance/_: Once per long rest, become able to ask for an insight into what will frustrate one NPC of your choosing the most. Gain +3 on rolls pertaining to that action.
 * Level 1 Sorceries:
 - _Reversion_: Move all targets within a 20-foot radius to the location they were in the previous turn. This location can be more than 20-feet away from the caster. /You cannot send targets back to other realms with this spell./
 - _Vitality Drain_: Pick a target  within a 30-foot radius to make a CON saving throw. On failure decrease the target's maximum health by the amount of damage they took in the previous turn. Until combat is over, they are stuck with that maximum health and cannot be healed above it.
