--- a/classes/subclasses/con_man.org
+++ b/classes/subclasses/con_man.org
@@ -1,49 +1,41 @@
 :PROPERTIES:
 :ID:       072dbba0-dd37-4c57-ae44-959867358be8
 :END:
+:CON_MAN:
 #+title:    Con man
 #+author:   zfoteff
 #+date:     [2023-07-15 Sat]
 #+summary:  Con man subclass description
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../../static/stylesheets/subclass-style.css" />
-
+:END:
 #+BEGIN_CENTER
-[[[id:DND][Main Menu]]] [[[id:campaign-classes][Character Selection]]] [[[id:campaign-classes][Classes]]] [[[id:7e784143-655d-4170-af49-68aceea59caa][Rogue]]]
+[[[id:DND][Main Menu]]] [[[id:campaign-classes][Classes]]] [[[id:7e784143-655d-4170-af49-68aceea59caa][Rogue]]]
 #+END_CENTER
 -----
 Use tricks and your unwavering confidence to talk your way into any party, and out of every fight.
 
-This class is going to role-play heavy, it will require a lot of improvisation on the player's part
+/This class is going to role-play heavy, it will require a lot of improvisation on the player's part/
 
 Start with:
-- A dice set or a playing card set
 - A forgery kit
 
 * Level 1
-Gain Striking Looks: You are a stunning individual, and your social skills are unmatched. You gain a +2 bonus to all deception and persuasion rolls. You also gain +2 bonus to performance if you are in front of a crowd.
+- _*Striking Looks*_: You are a stunning individual, and your social skills are unmatched. You gain a +2 bonus to all deception and persuasion rolls. You also gain +2 bonus to performance if you are in front of a crowd.
 * Level 2
-Gain Silver Tongue: You're conversational skills are unmatched and you can easily deceive others. You can select a target in combat and make a Deception check contested by the target's Insight. If your check succeeds: any attack the targeted creature makes against you is made with disadvantage. Any attack or ability check you make against the target is made with advantage. If the check fails, the target cannot be deceived this way for one hour.
-
-Gain Gambits: You develop special [[id:1a4c073a-78f7-4500-899b-fccc59a1dcf0][gambits]] to help your criminal endeavors. You learn 2 gambits initially, and you can gain more as you gain levels in the class. Every time you learn a new gambit, you can replace one gambit you know for a new one.
+- _*Silver Tongue*_: You're conversational skills are unmatched and you can easily deceive others. You can select a target in combat and make a Deception check contested by the target's Insight. If your check succeeds: any attack the targeted creature makes against you is made with disadvantage. Any attack or ability check you make against the target is made with advantage. If the check fails, the target cannot be deceived this way for one hour.
+- _*Gambits*_: You develop special [[id:1a4c073a-78f7-4500-899b-fccc59a1dcf0][gambits]] to help your criminal endeavors. You learn 2 gambits initially, and you can gain more as you gain levels in the class. Every time you learn a new gambit, you can replace one gambit you know for a new one.
 * Level 5
-Gain Smart Talker: You can add your Intelligence modifier as a bonus to any Charisma check you make.
-
-Gain Advanced Silver Tongue: You hone your conversational skills so that you can use Silver Tongue outside of combat. If the check passes: you have the ability to make any humanoid who is neither hostile, nor friendly to you now be considered friendly. If the check fails: the target cannot be deceived this way for a minute, rather than an hour.
-
+- _*Smart Talker*_: You can add your Intelligence modifier as a bonus to any Charisma check you make.
+- _*Advanced Silver Tongue*_: You hone your conversational skills so that you can use Silver Tongue outside of combat. If the check passes: you have the ability to make any humanoid who is neither hostile, nor friendly to you now be considered friendly. If the check fails: the target cannot be deceived this way for a minute, rather than an hour.
 * Level 10
-Gain +2 to Charisma.
-
-You are now capable of learning 3 gambits.
-
-Gain Distraction: You can distract one target who you can see and can see you. Make a Performance/Deception/Persuasion check contested by the targets Insight. If the check success: you can gain the target's attention long enough so that it has to make a Perception check to escape your distraction, and all target actions are disadvantaged.
+- You are now capable of learning 3 gambits.
+- _*Gain Distraction*_: You can distract one target who you can see and can see you. Make a Performance/Deception/Persuasion check contested by the targets Insight. If the check success: you can gain the target's attention long enough so that it has to make a Perception check to escape your distraction, and all target actions are disadvantaged.
 * Level 15
-Gain Magnetic Personality: You can now attract crowds of people to follow you. You may attract a crowd equal to 2 times your charisma modifier who will serve you loyally and even fight for you, at no cost besides basic lifestyle expenses [fn:1].
-
-Gain Long Sleep: You instantly kill sleeping targets, unless they are extremely powerful, in which case confer with the DM to determine an amount of damage you can deal to the target.
+- _*Magnetic Personality*_: You can now attract crowds of people to follow you. You may attract a crowd equal to 2 times your charisma modifier who will serve you loyally and even fight for you, at no cost besides basic lifestyle expenses [fn:1].
+- _*Long Sleep*_: You instantly kill sleeping targets, unless they are extremely powerful, in which case confer with the DM to determine an amount of damage you can deal to the target.
 * Level 19
-Receive a 50% discount on all items while shopping.
-
-Gain Cult of Personality: You can now attract more people to follow you. You may attract a crowd equal to 5 times your charisma modifier who will serve you loyally and even fight for you, at no cost besides basic lifestyle expenses [fn:1].
+- _*Preferred Shopper*_: Receive a 50% discount on all items while shopping.
+- _*Cult of Personality*_: You can now attract more people to follow you. You may attract a crowd equal to 5 times your charisma modifier who will serve you loyally and even fight for you, at no cost besides basic lifestyle expenses [fn:1].
 -----
 * Footnotes
 [fn:1] The first rule of raising an army/cult/religion/Oregon Trail wagon/militia/political party: you have to feed your followers for them to follow you. Food isn't free.
