--- a/classes/warrior.org
+++ b/classes/warrior.org
@@ -1,29 +1,31 @@
 :PROPERTIES:
 :ID:       1846aace-7d40-41af-95e6-4a4d72044af5
 :END:
+:WARRIOR:
 #+title:    Warrior
 #+filetags: :DND:warrior:
 #+author:   zfoteff
 #+date:     [2023-08-10 Thu]
 #+summary:  Warrior class summary
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../static/stylesheets/subclass-style.css" />
+:END:
 #+BEGIN_CENTER
 [[[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]]] [[[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]]]
 #+END_CENTER
 -----
-Hack, slash, pummel, and dominate your enemies on the way to victory. Uses weapons primarily. To start as a Warrior, first choose a subclass: [[[id:2cbe3cbc-4959-44c9-9f33-a96424651355][Soldier]], [[id:83fe62a2-eb63-488d-897e-b5b439718f03][Rebel]], [[id:da305734-97ab-40f1-aacc-ad8c31ce25f4][Brute]]]. These classes give you special traits and abilities that give you some distinct advantages.
+Hack, slash, pummel, and dominate your enemies on the way to victory. Uses weapons primarily. To start as a Warrior, first choose a subclass: [[[id:2cbe3cbc-4959-44c9-9f33-a96424651355][Soldier]], [[id:83fe62a2-eb63-488d-897e-b5b439718f03][Rebel]], [[id:da305734-97ab-40f1-aacc-ad8c31ce25f4][Brute]]]. These classes give you special traits and abilities that give you some distinct advantages. Be sure to choose a level 1 subclass ability and subclass trait to apply to your character.
 
 - _Initial Health_: Roll a 1d8 and add it to your base HP. This is your Hit Die (HD). You will add the amount your roll to your base health every time your level up.
 - Gain one talisman at level 1.
 
 * Proficiencies
-| Armor       | Weapons     | Tools |
-|-------------+-------------+-------|
-| All Armor   | Short sword |       |
-|             | Long Sword  |       |
-|             | Daggers     |       |
-|             | Spears      |       |
-|             | Halberd     |       |
+| Armor     | Weapons     | Tools |
+|-----------+-------------+-------|
+| All Armor | Short sword |       |
+|           | Long Sword  |       |
+|           | Daggers     |       |
+|           | Spears      |       |
+|           | Halberd     |       |
 * Level-up
 1. Gain _Warrior Reactions_: Parry and Block. Success of parrying increases with lower damages (1% of your health = 99% parry chance, 50% of health = 0% parry chance). Block reduces damage in accordance with the Warrior Shield chart on passing a constitution save. Unsuccessful parries prevent parrying on the next turn. Add a subclass ability.
 2. Add a subclass ability.
@@ -32,10 +34,11 @@ Hack, slash, pummel, and dominate your enemies on the way to victory. Uses weapo
 5. Gain _Duelist_: When fighting a one-on-one battle, deal 1.5x damage to your opponent.
 6. Gain _Last Stand_: The first attack that knocks you unconscious instead reduces you to 1 HP.
 7. Gain _Throw Weapon_: You may now throw any melee weapon you have at an enemy within 50 feet to deal 3x damage. Subtract -4 on rolls to hit.
-8.
-9.
-10. Gain an extra attack
-11. Gain _Rampage_: When you've taken damage from more than 1 enemy in the last turn, become able to attack every enemy in a thirty-foot radius with your actions.
-12. Unsuccessful parries no longer prevent a consecutive parry
+8. Gain an extra attack
+9. Gain _Rampage_: When you've taken damage from more than 1 enemy in the last turn, become able to attack every enemy in a thirty-foot radius with your actions.
+10. Unsuccessful parries no longer prevent a consecutive parry
 
+#+BEGIN_CENTER
+--- 🚧 Under Construction 🚧 ---
+#+END_CENTER
 * Footnotes
