--- a/classes/wizard.org
+++ b/classes/wizard.org
@@ -15,36 +15,38 @@
 -----
 Become a powerful channel of the magical elements. Use spells primarily, cast using the character's *Intelligence* stat.
 
-To begin as a wizard, choose an element to subclass into: [[[id:7141f6ab-b3bc-4eeb-9e7e-071452bfc673][Fire]] 🔥, [[id:4ebd35da-05f7-456f-88b8-c8865a270b8f][Storm]] 🌩, [[id:8153acaf-ac20-4b00-8ac0-fa423c4ff5ce][Radiant]] ✨]. Each element comes with some special abilities as you get stronger, and a few distinct advantages right off the bat. All wizards can learn generic spells in the spell index, wizard specific spells, and elemental spells matching their selected element. Be sure you apply your level 1 bonuses from your subclass. Make sure to review the Magic Guide to get an understanding of the magic system.
+To begin as a wizard, choose an element to subclass into: [[[id:7141f6ab-b3bc-4eeb-9e7e-071452bfc673][Fire]] 🔥, [[id:4ebd35da-05f7-456f-88b8-c8865a270b8f][Storm]] 🌩, [[id:8153acaf-ac20-4b00-8ac0-fa423c4ff5ce][Radiant]] ✨]. Each element comes with some special abilities as you get stronger, and a few distinct advantages right off the bat. All wizards can learn generic spells in the spell index, wizard specific spells, and elemental spells matching their selected element. Be sure you apply your level 1 bonuses from your subclass and pick 1 trait from your subclass to apply to your character. Make sure to review the [[id:7521a020-4fd2-4b75-9e24-5aa4c2fb69e3][Spell Index]] for a full list of applicable spells Wizards can learn.
 
 - _Initial Health_: Roll a 1d6 and add it to your base HP. This is your Hit Die (HD). You will add the amount your roll to your base health every time your level up.
-- Spells are cast using INT + PROF (Wisdom modifier + Proficiency modifier)
+- Spells are cast using INT + PROF (Intelligence modifier + Proficiency modifier)
 
 * Proficiencies
-| Armor | Weapons       | Tools |
-|-------+---------------+-------|
-|       | Staffs        |       |
-|       | Daggers       |       |
-|       | Quarterstaffs |       |
+| Armor | Weapons       | Tools   |
+|-------+---------------+---------|
+|       | Staffs        | Palatir |
+|       | Daggers       |         |
+|       | Quarterstaffs |         |
+
+
 * Level-up guide
 1. Pick one generic spell, one wizard spell, and one elemental spell (consult your subclass page). You begin the game with three level one spell slots (Total: 3 lvl1, 0 lvl2, 0 lvl3, 0 lvl4). All three reset on every long rest. Spell slots are only used up during combat encounters.
-2. Add one generic spell and one wizard spell to your spell list. Add 1d6 to your health.
-3. Add one elemental spell and 1d6 health. Add one level one spell slot (Total: 4, 0, 0, 0).
-4. Gain Recast Recharge and add 1d6 health.
+2. Add one generic spell and one wizard spell to your spell list
+3. Add one elemental spell. Add one level one spell slot (Total: 4, 0, 0, 0).
+4. Increase one ability score of your choosing by +2, or two ability scores by +1
 5. Add +1 INT and +1 of Any, as well as one level two spell slot. You are now able to learn level two spells and gain 1 level two spell slot (Total: 4, 1, 0, 0).
-6. Add one generic spell, one wizard spell, and 1d6 health.
-7. Add one elemental spell, one level two spell slot, and 1d6 health (Total: 4, 2, 0, 0).
-8. Add one elemental trait and 1d6 health.
-9. Add +1 of Any.
-10. Become an Archmage: Evolve, Mutate, or Ascend.
+6. Add one generic spell and one wizard spell.
+7. Add one elemental spell and one level two spell slot (Total: 4, 2, 0, 0).
+8. Increase one ability score of your choosing by +2, or two ability scores by +1
+9. Add an additional trait you have not acquired from your subclass page to your character
+10. Become an Archmage: Evolve, Mutate, or Ascend. Consult the spell index for options.
 11. You are now able to learn level three spells. Add two generic spells, one level three spell slot, and 1d6 health. (Total: 4, 2, 1, 0)
-12. Add one wizard spell and 1d6 health (Total: 4, 2, 1, 0)
+12. Increase one ability score of your choosing by +2, or two ability scores by +1
 13. Add one elemental spell.
-14. Add +1 of Any and 1d6 health and one level two spell slot..
-15. Add one elemental trait, one level three spell slot, and 1d6 health (Total: 4, 3, 2, 0).
-16. You are now able to learn level four spells. Add one level four spell slot. (Total: 4, 3, 2, 1).
-17. Add one generic spell and 1d6 health.
-18. Add one wizard spell and 1d6 health.
-19. Add ONE elemental spell and 1d6 health. Become a Transcendent Archmage.
+14. Add +1 of Any and 1d6 health and one level two spell slot (Total: 4, 3, 1, 0).
+15. Add one subclass ability and one level three spell slot (Total: 4, 3, 2, 0).
+16. Increase one ability score of your choosing by +2, or two ability scores by +1
+17. You are now able to learn level four spells. Add one level four spell slot. (Total: 4, 3, 2, 1). Add one generic spell and one wizard spell
+18. Add ONE elemental spell and 1d6 health. Become a Transcendent Archmage.
+19. Increase one ability score of your choosing by +2, or two ability scores by +1
 20. Multiclass
 -----
